--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-1.jpg" alt="Image">
+                            <img src="img/hh.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h3>Keep your Vehicle Modern</h3>
-                            <h1>LARGE SCALE PRINTING</h1>
+                            <h3>Keep Your Life Modern</h3>
+                            <h1 style="text-shadow:0 2px 10px rgb(0, 0, 0) ;">OUTDOOR LED DISPLAY</h1>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasellus ut mollis mauris. Vivamus egestas eleifend dui ac
                             </p>
@@ -101,12 +101,12 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-2.jpg" alt="Image">
+                            <img src="img/hh2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                            
                             <h3>Quality service for you</h3>
-                            <h1>ETCHING & ENGRAVING SIGNS</h1>
+                            <h1 style="text-shadow:0 2px 10px black ;">2D & 3D OUTDOOR SIGNAGE</h1>
                             <p>
                                 Morbi sagittis turpis id suscipit feugiat. Suspendisse eu augue urna. Morbi sagittis orci sodales
                             </p>
@@ -115,11 +115,11 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-3.jpg" alt="Image">
+                            <img src="img/hh3.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h3>EXHIBITION SERVICES</h3>
-                            <h1>Exterior & Interior </h1>
+                            <h1 style="text-shadow:0 2px 10px black ;">Exterior & Interior </h1>
                             <p>
                                 Sed ultrices, est eget feugiat accumsan, dui nibh egestas tortor, ut rhoncus nibh ligula euismod quam
                             </p>
@@ -138,7 +138,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/about.jpg" alt="Image">
+                            <img src="img/bb.jpg" hieght="500px" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
